# dynamixel_gui

./: .gitignore  .gitmodules  ;  compile_commands.json  error.txt  motor_script.zsh  out.txtt  positions.txt  send_script.sh  test.py  trajectory.msg
TrajUpload/: requirements.txt  robotPyTraj.py  robotTraj.py
TrajUpload/pyscurve/: scurve.py  trajectory.py
build_isolated/: catkin_make_isolated.cache
build_isolated/motor_positions/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_isolated/rosserial/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_arduino/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_chibios/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_client/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_embeddedlinux/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_mbed/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_python/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_server/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_test/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_tivac/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_vex_cortex/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_vex_v5/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_windows/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rosserial_xbee/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/: ui_dynamixel_gui.h  ui_image_view.h
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/motor_positions/: .catkin  .rosinstall  local_setup.sh
devel_isolated/rosserial/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel_isolated/rosserial_arduino/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel_isolated/rosserial_chibios/: .catkin  .rosinstall  local_setup.sh
devel_isolated/rosserial_client/: .catkin  .rosinstall  local_setup.sh
devel_isolated/rosserial_embeddedlinux/: .catkin  _setup_util.py  setup.sh
install/: .rosinstall  local_setup.sh  setup.sh
src/: CMakeLists.txt  publish_positions.py
src/dynamixel_gui/: .tar  CMakeLists.txt  package.xml  plugin.xml
src/dynamixel_gui/include/dynamixel_gui/: dynamixel_gui.h
src/dynamixel_gui/msg/: DynamixelPosition.msg
src/dynamixel_gui/scripts/: dynamixel_gui  serial_coms.py
src/dynamixel_gui/src/dynamixel_gui/: dynamixel_gui.cpp  dynamixel_gui.ui
(+518 files in other folders)
