<package>
  <name>dynamixel_gui</name>
  <description>GUI for controlling Dynamixel MX28s</description>
  <maintainer email="charraff@gmail.com">Charles Raffaele</maintainer>
  <version>0.0.1</version>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
